--- a/index.html
+++ b/index.html
@@ -5,20 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Todo list</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Pomodoro Timer</title>
 </head>
 <body>
-    <h1 id="title">Todo List</h1>
-    <div id="wrap">
-    <input type="text" id="text">
-    <button onclick="todolist()" id="add">Add</button>
-</div>
-    <ul id="todolist">
-    </ul>
-    <div id="completed">
-        <h1>completed</h1>
-        
-    </div>
-    <script src="app.js"></script>
+    <section id="section">
+    <div id="container">
+        <h1 id="heading">Pomodoro Timer</h1>
+        <input type="text" id="input">
 
+        <div id="panel">
+            <div id="work">work</div>
+            <div id="break">break</div>
+        </div>
+        <div id="timer">
+            <div id="time">
+                <p id="minutes"></p>
+                <p>:</p>
+                <p id="seconds"></p>
+            </div>
+        </div>
+        <div id="controls">
+            <button><i onclick="start()" class="fa-solid fa-play" id="start"></i></button>
+            <i onclick="reset()" class="fa-solid fa-arrow-rotate-left" id="reset"></i>
+        </div>
+    </div>
+</section>
+    <script src="app.js"></script>
 </body>
+</html>
