--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <section id="section">
     <div id="container">
         <h1 id="heading">Pomodoro Timer</h1>
-        <input type="text" id="input">
+        <input type="number" id="input"  min="0" max="99" step="1">
 
         <div id="panel">
-            <div id="work">work</div>
+            <div id="work" >work</div>
             <div id="break">break</div>
         </div>
         <div id="timer">
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div id="controls">
-            <button><i onclick="start()" class="fa-solid fa-play" id="start"></i></button>
+            <button><i class="fa-solid fa-play" id="start"></i></button>
             <i onclick="reset()" class="fa-solid fa-arrow-rotate-left" id="reset"></i>
         </div>
     </div>
