javascript done for now yay!!!!! :)

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <section id="section">
     <div id="container">
         <h1 id="heading">Pomodoro Timer</h1>
-        <input type="number" id="input"  min="0" max="99" step="1">
-
+        <input type="number" id="input"  min="1" max="99" step="1">
+        <input type="number" id="input-break"  min="1" max="99" step="1">
+        <input type="number" id="input-longbreak"  min="1" max="99" step="1">
         <div id="panel">
             <div id="work" >work</div>
             <div id="break">break</div>
