--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="time">
                 <p id="minutes"></p>
                 <p>:</p>
-                <p id="seconds"></p>
+                <p id="seconds">0</p>
             </div>
         </div>
         <div id="controls">
