--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
         <input type="number" id="input"  min="1" max="99" step="1">
         <input type="number" id="input-break"  min="1" max="99" step="1">
         <input type="number" id="input-longbreak"  min="1" max="99" step="1">
+        <input type="number" id="longbreak-interval"  min="1" max="99" step="1">
+
         <div id="panel">
             <div id="work" >work</div>
             <div id="break">break</div>
+            <div id="longbreak">long break</div>
         </div>
         <div id="timer">
             <div id="time">
