finished pause button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
            
             <i id="pause" class="fa-solid fa-pause"></i>
         </div>
-        <i onclick="reset()" class="fa-solid fa-arrow-rotate-left" id="reset"></i>
+        <i  class="fa-solid fa-arrow-rotate-left" id="reset"></i>
     </div>
 </section>
     <script src="app.js"></script>
