added really good changes to the title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Pomodoro Timer</title>
+    <title>
+    </title>
 </head>
 <body>
     <section id="section">
@@ -19,9 +20,9 @@
         <input type="number" id="longbreak-interval"  min="1" max="99" step="1">
 
         <div id="panel">
-            <div id="work" >work</div>
-            <div id="break">break</div>
-            <div id="longbreak">long break</div>
+            <div id="work" >Work</div>
+            <div id="break">Short Break</div>
+            <div id="longbreak">Long Break</div>
         </div>
         <div id="timer">
             <div id="time">
